Add white space fix for visually hidden
Ref. https://mobile.twitter.com/stowball/status/799921561717215232

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -50,6 +50,7 @@
  */
 @mixin blazer-utils-hidden-visually ( $focusable: false ) {
 	position: absolute; top: -9999px; left: -9999px;
+	white-space: nowrap;
 
 	@if $focusable {
 		@include _blazer-utils-hidden-visually-focusable;
