--- a/_mixins.scss
+++ b/_mixins.scss
@@ -12,6 +12,7 @@
 	&:focus,
 	&:active {
 		position: static;
+		width: auto; height: auto;
 	}
 }
 
@@ -49,7 +50,11 @@
  * Hide only visually, but have it available for screenreaders.
  */
 @mixin blazer-utils-hidden-visually ( $focusable: false ) {
-	position: absolute; top: -9999px; left: -9999px;
+	position: absolute;
+	width: 1px; height: 1px;
+	padding: 0; border: 0;
+	overflow: hidden;
+	clip: rect(1px, 1px, 1px, 1px);
 	white-space: nowrap;
 
 	@if $focusable {
@@ -62,6 +67,7 @@
  */
 @mixin blazer-utils-hidden-visually-revert {
 	position: static;
+	width: auto; height: auto;
 }
 
 /**
