--- a/test/index.scss
+++ b/test/index.scss
@@ -17,7 +17,9 @@
 				.jackie {
 					display: block;
 					overflow: hidden;
+					font-size: 1px;
 					text-align: left;
+					white-space: nowrap;
 					background-color: transparent;
 					background-repeat: no-repeat;
 					color: transparent;
@@ -33,7 +35,9 @@
 				.otis {
 					display: block;
 					overflow: hidden;
+					font-size: 1px;
 					text-align: left;
+					white-space: nowrap;
 					background-color: transparent;
 					background-repeat: no-repeat;
 					color: transparent;
